  (Greta Yorsh, review by Mark Shinwell, Sébastien Hinderer and Frédéric Bour)

- #9003: Start compilation from Emit when the input file is in Linear IR format.
  (Greta Yorsh, review by Jérémie Dimino, Gabriel Scherer and Frédéric Bour)

- #9963: Centralized tracking of frontend's global state
  (Frédéric Bour and Thomas Refis, review by Gabriel Scherer)

### Build system:

- #7121, #9558: Always the autoconf-discovered ld in PACKLD. For
  cross-compilation, this means the triplet-prefixed version will always be
  used.
  (David Allsopp, report by Adrian Nader, review by Sébastien Hinderer)

- #9332, #9518, #9529: Cease storing C dependencies in the codebase. C
  dependencies are generated on-the-fly in development mode. For incremental
  compilation, the MSVC ports require GCC to be present.
  (David Allsopp, review by Sébastien Hinderer, YAML-fu by Stephen Dolan)

- #9527: stop including configuration when running 'clean' rules
  to avoid C dependency recomputation.
  (Gabriel Scherer, review by David Allsopp)

- #9804: Build C stubs of libraries in otherlibs/ with debug info.
  (Stephen Dolan, review by Sébastien Hinderer and David Allsopp)

- #9824, #9837: Honour the CFLAGS and CPPFLAGS variables.
  (Sébastien Hinderer, review by David Allsopp)

- #9895, #9523: Avoid conflict with C++20 by not installing VERSION to the OCaml
  Standard Library directory.
  (Bernhard Schommer, review by David Allsopp)

### Bug fixes:

- #7538, #9669: Check for misplaced attributes on module aliases
  (Leo White, report by Thomas Leonard, review by Florian Angeletti)

- #7902, #9556: Type-checker infers recursive type, even though -rectypes is
  off.
  (Jacques Garrigue, report by Francois Pottier, review by Leo White)

- #8746: Hashtbl: Restore ongoing traversal status after filter_map_inplace
  (Mehdi Bouaziz, review by Alain Frisch)

- #8747, #9709: incorrect principality warning on functional updates of records
  (Jacques Garrigue, report and review by Thomas Refis)
