@@ -48,14 +48,14 @@
 #if defined(SYS_macosx) || defined(SYS_mingw) || defined(SYS_cygwin)
 #define TEXT_SECTION(name)
 #else
-#define TEXT_SECTION(name) .section .text.##name,"ax",%progbits
+#define TEXT_SECTION(name) .section .text.caml.##name,"ax",%progbits
 #endif
 #else
 #define TEXT_SECTION(name)
 #endif
 
 #define FUNCTION(name) \
-        TEXT_SECTION(caml.##name); \
+        TEXT_SECTION(name); \
         .globl G(name); \
         .align FUNCTION_ALIGN; \
         G(name):
@@ -96,6 +96,7 @@
 #define ALIGN_STACK(amount) subl $ amount, %esp ; CFI_ADJUST(amount)
 #define UNDO_ALIGN_STACK(amount) addl $ amount, %esp ; CFI_ADJUST(-amount)
 
+        .text
 #if defined(FUNCTION_SECTIONS)
         TEXT_SECTION(caml_hot__code_begin)
         .globl  G(caml_hot__code_begin)
@@ -107,7 +108,7 @@ G(caml_hot__code_end):
 #endif
 
 /* Allocation */
-        .text
+        TEXT_SECTION(caml_system__code_begin)
         .globl  G(caml_system__code_begin)
 G(caml_system__code_begin):
 
@@ -416,6 +417,7 @@ FUNCTION(caml_ml_array_bound_error)
         CFI_ENDPROC
         ENDFUNCTION(caml_ml_array_bound_error)
 
+        TEXT_SECTION(caml_system__code_end)
         .globl  G(caml_system__code_end)
 G(caml_system__code_end):
 
